--- a/club_home_css.css
+++ b/club_home_css.css
@@ -357,6 +357,9 @@ section{
 .reply-section {
     display: none;
 }
+.reply-form {
+    display: none;
+}
 .fa-star, .fa-thumbs-up, .fa-thumbs-down{
 }
 
