--- a/club_home_css.css
+++ b/club_home_css.css
@@ -358,7 +358,7 @@ section{
     display: none;
 }
 .reply-form {
-    display: block;
+    display: none;
 }
 .fa-star, .fa-thumbs-up, .fa-thumbs-down{
 }
