--- a/profile.css
+++ b/profile.css
@@ -1,6 +1,4 @@
-body {
-    font-family: Arial, sans-serif;
-  }
+body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   
   .containerr {
     max-width: 600px;
@@ -14,17 +12,17 @@ body {
     text-align: center;
   }
   
-  .containerr table {
+  .con{
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
   }
   
-  .containerr th, td {
+  .con th, td {
     padding: 10px;
     border: 1px solid #ccc;
   }
   
-  .containerr th {
+  .con th {
     background-color: #006f71;;
   }
