--- a/profile.css
+++ b/profile.css
@@ -4,7 +4,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     max-width: 600px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #0af550;
     border-radius: 5px;
   }
   
@@ -20,7 +20,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   
   .con th, td {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #ff0000;
   }
   
   .con th {
