--- a/About.css
+++ b/About.css
@@ -70,10 +70,13 @@ body{
     background-color: #006f71;
     height: 100px;
     display: flex;
+    align-items: center;
+    margin: auto;
     flex-direction: row;
     justify-content: space-between;
     width: 1366px;
 }
+
 
 .detailedInfo{
     padding-left: 10px;
