--- a/profile.css
+++ b/profile.css
@@ -18,11 +18,13 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     margin-bottom: 20px;
   }
   
-  .con th, td {
+  .con td {
     padding: 10px;
     border: 1px solid #ff0000;
   }
   
   .con th {
+    padding: 10px;
+    border: 1px solid #ff0000;
     background-color: #006f71;;
   }
