--- a/profile.css
+++ b/profile.css
@@ -4,7 +4,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     max-width: 600px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #0af550;
+    background-color:#ffffff;
     border-radius: 5px;
   }
   
@@ -21,13 +21,14 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   
   .con td {
     padding: 10px;
-    color: #f5f5f5;
-    border: 1px solid #ff0000;
+    color: #000000;
+    border: 1px solid #ffffff;
+    background-color: #ffc21c;
   }
   
   .con th {
     padding: 10px;
     color: #f5f5f5;
-    border: 1px solid #ff0000;
+    border: 1px solid #ffffff;
     background-color: #006f71;;
   }
