--- a/profile.css
+++ b/profile.css
@@ -10,7 +10,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   
   .containerr h1 {
     text-align: center;
-    color: #f5f5f5;
+    color: #000000;
   }
   
   .con{
