--- a/About.css
+++ b/About.css
@@ -16,7 +16,7 @@ body{
 
 .top-section{
     margin-left: 200px;
-    background-color: #006f71;
+    background-color: #ffc21c;
     display: flex;
     align-items: center;
     margin: auto;
