--- a/profile.css
+++ b/profile.css
@@ -18,7 +18,12 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     border-collapse: collapse;
     margin-bottom: 20px;
   }
-  
+  .con img{
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+  }
+
   .con td {
     padding: 10px;
     color: #000000;
