--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -145,3 +145,73 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     font-size: 15px;
     text-align: center;
 }
+
+
+
+
+
+
+
+.events-Gridrr{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 25px;
+    row-gap: 25px;
+    max-width: 1366px;
+    position: relative;
+    align-items: center;
+    margin: auto;
+    padding-bottom: 20px;
+}
+
+
+.EventContainerrr{
+    height: 260px;
+    width:310px;
+    background-color: #DDE5E3;
+    padding: 10px;
+   
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.31)
+ 
+}
+.coverrr{
+
+    display: flex;
+    justify-content: center;
+}
+
+.coverrr img{
+    height: 150px;
+    width: 310px;
+    background-color: black;
+    object-fit: cover;
+}
+
+.eventDescriptionrr{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    height: 110px;
+    text-align: justify;
+}
+
+.eventDescriptionrr h1{
+    text-align: center;
+}
+
+.textrr{
+    margin:auto;
+    width: 275px;
+    margin-left: 15px;
+    margin-top: 0px;
+    height: 80px;
+    
+    font-size: 12px;
+}
+
+.Titlerr{
+    font-size: 15px;
+}
+
+.descriptrrr{
+    margin-top: -5px;
+}
