--- a/profile.css
+++ b/profile.css
@@ -35,5 +35,5 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     padding: 10px;
     color: #f5f5f5;
     border: 1px solid #ffffff;
-    background-color: #006f71;;
+    background-color: #006f71;
   }
