--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -154,7 +154,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 .events-Gridrr{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 25px;
     row-gap: 25px;
     max-width: 1366px;
@@ -167,7 +167,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 .EventContainerrr{
     height: 260px;
-    width:310px;
+    width:260px;
     background-color: #DDE5E3;
     padding: 10px;
    
@@ -182,7 +182,6 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 .coverrr img{
     height: 150px;
-    width: 310px;
     background-color: black;
     object-fit: cover;
 }
