--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -155,8 +155,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 .events-Gridrr{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 25px;
-    row-gap: 25px;
+    justify-content: space-around;
     max-width: 1366px;
     position: relative;
     align-items: center;
@@ -174,14 +173,10 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.31)
  
 }
-.coverrr{
-
-    display: flex;
-    justify-content: center;
-}
 
 .coverrr img{
     height: 150px;
+    width:260px;
     background-color: black;
     object-fit: cover;
 }
@@ -199,11 +194,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 .textrr{
     margin:auto;
-    width: 275px;
-    margin-left: 15px;
-    margin-top: 0px;
     height: 80px;
-    
     font-size: 12px;
 }
 
@@ -212,5 +203,5 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 }
 
 .descriptrrr{
-    margin-top: -5px;
+
 }
