--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -156,7 +156,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: space-between;
-    column-gap: 25px;
+    row-gap: 25px;
     max-width: 1366px;
     position: relative;
     align-items: center;
@@ -170,7 +170,6 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     width:260px;
     background-color: #DDE5E3;
     padding: 10px;
-   
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.31)
  
 }
@@ -185,17 +184,20 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 .eventDescriptionrr{
     background-color: rgb(255, 255, 255);
     display: flex;
+    flex-direction: row;
     height: 110px;
     text-align: justify;
-    text-decoration:none; 
-    color: black;
+   
 }
 
 .eventDescriptionrr h1{
     text-align: center;
     font-size: 20px;
 }
-
+.eventDescriptionrr a{
+    text-decoration:none; 
+    color: black;
+}
 .textrr{
     font-size: 12px;
 }
