--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -193,6 +193,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 .eventDescriptionrr h1{
     text-align: center;
     font-size: 20px;
+    background-color: #006f71;
 }
 .eventDescriptionrr a{
     text-decoration:none; 
@@ -207,6 +208,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 }
 .eventDescriptionrr p{
     font-size: 15px;
+    
 }
 .descriptrrr{
 
