--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -166,6 +166,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 
 .EventContainerrr{
+    
     height: 260px;
     width:260px;
     background-color: #DDE5E3;
@@ -184,7 +185,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 .eventDescriptionrr{
     background-color: rgb(255, 255, 255);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     height: 110px;
     text-align: justify;
    
@@ -208,7 +209,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 }
 .eventDescriptionrr p{
     font-size: 15px;
-    
+
 }
 .descriptrrr{
 
