--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -156,7 +156,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: space-between;
-    row-gap: 25px;
+    row-gap: 40px;
     max-width: 1366px;
     position: relative;
     align-items: center;
@@ -166,7 +166,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 
 .EventContainerrr{
-    
+
     height: 260px;
     width:260px;
     background-color: #DDE5E3;
@@ -187,12 +187,12 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     display: flex;
     flex-direction: column;
     height: 110px;
-    text-align: justify;
    
 }
 
 .eventDescriptionrr h1{
     text-align: center;
+    display: inline-block;
     font-size: 20px;
     background-color: #006f71;
 }
@@ -209,6 +209,8 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 }
 .eventDescriptionrr p{
     font-size: 15px;
+    display: inline-block;
+    background-color: #ffc21c;
 
 }
 .descriptrrr{
