--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -187,6 +187,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     display: flex;
     flex-direction: column;
     height: 110px;
+    margin: 0;
    
 }
 
