--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -196,6 +196,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     display: inline-block;
     font-size: 20px;
     background-color: #006f71;
+    margin: 0;
 }
 .eventDescriptionrr a{
     text-decoration:none; 
@@ -212,6 +213,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     font-size: 15px;
     display: inline-block;
     background-color: #ffc21c;
+    margin: 0;
 
 }
 .descriptrrr{
