--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -188,6 +188,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     flex-direction: column;
     height: 110px;
     margin: 0;
+    text-align: justify;
    
 }
 
