--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -205,12 +205,12 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 .eventDescriptionrr p{
     font-size: 15px;
-    display: inline-block;
     background-color: #ffc21c;
     margin: 0;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
     overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 100%;
 
 }
 
