--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -135,6 +135,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     border-width: 1px;
     padding: 4px;
     transition: 0.25s;
+    text-align: center;
 }
 
 .member_Counter:hover{
