--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -135,7 +135,6 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     border-width: 1px;
     padding: 4px;
     transition: 0.25s;
-    text-align: center;
 }
 
 .member_Counter:hover{
@@ -212,3 +211,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 }
 
+.member_Counter h2{
+    font-size: 15px;
+    text-align: center;
+}
