--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -134,6 +134,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     border-style: solid;
     border-width: 1px;
     transition: 0.25s;
+    height: 100%;
 }
 
 .member_Counter:hover{
@@ -213,4 +214,5 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 .member_Counter h2{
     font-size: 15px;
     text-align: center;
+    background-color: #ffc21c;
 }
