--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -135,6 +135,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     border-width: 1px;
     transition: 0.25s;
     height: 100%;
+    display: inline-block;
 }
 
 .member_Counter:hover{
@@ -215,4 +216,5 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     font-size: 15px;
     text-align: center;
     background-color: #ffc21c;
+    margin: 0;
 }
