--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -215,4 +215,5 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     text-align: center;
     background-color: #ffc21c;
     margin: 0;
+    padding: 5px;
 }
