--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -168,7 +168,8 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     width:260px;
     background-color: #DDE5E3;
     padding: 10px;
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.31)
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.31);
+    position: relative;
  
 }
 
