--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -178,6 +178,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     width:260px;
     background-color: black;
     object-fit: cover;
+    position: absolute;
 }
 
 .eventDescriptionrr{
