--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -73,7 +73,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 .icon_option{
     position: absolute;
     box-shadow: 0px 0px 5px rgba(0,0,0,1);
-    right: -70px;
+    right: -50px;
     background-color: #ffffff;
     
 }
@@ -84,6 +84,13 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     font-size: 18px;
     text-shadow:none;
     padding: 0 20 5 5;
+    text-decoration: none;
+    color: black;
+    
+}
+.icon_option input{
+    padding: 0 20 5 5;
+    font-size: 18px;
     text-decoration: none;
     color: black;
     
