--- a/profile.css
+++ b/profile.css
@@ -37,3 +37,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     border: 1px solid #ffffff;
     background-color: #006f71;
   }
+
+  .pro_pic{
+    display: block;
+  }
