--- a/profile.css
+++ b/profile.css
@@ -39,5 +39,5 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   }
 
   .pro_pic{
-    display: block;
+    display: none;
   }
