--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -73,9 +73,9 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 .icon_option{
     position: absolute;
     box-shadow: 0px 0px 5px rgba(0,0,0,1);
-    right: -50px;
+    right: -60px;
     background-color: #ffffff;
-    
+    display: none;
 }
 
 .icon_option a{
