--- a/profile.css
+++ b/profile.css
@@ -41,3 +41,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   .pro_pic{
     display: none;
   }
+
+  .user_pass{
+    display: none;
+  }
