--- a/profile.css
+++ b/profile.css
@@ -45,3 +45,22 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   .user_pass{
     display: none;
   }
+  .user_pass{
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+  
+  .user_pass td {
+    padding: 10px;
+    color: #000000;
+    border: 1px solid #ffffff;
+    background-color: #ffc21c;
+  }
+  
+  .user_pass th {
+    padding: 10px;
+    color: #f5f5f5;
+    border: 1px solid #ffffff;
+    background-color: #006f71;
+  }
