--- a/cclub_Page.css
+++ b/cclub_Page.css
@@ -209,7 +209,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
 
 .eventDescriptionrr p{
     font-size: 12px;
-    margin:5px 0 0 0;
+    margin:5px 5px 0 5px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 7;
