--- a/NewEventHomePage.css
+++ b/NewEventHomePage.css
@@ -8,13 +8,8 @@
     color: #f5f5f5;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    background-color: #f5f5f5;
+* {box-sizing: border-box; margin:0; padding: 0;}
+body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5; font-size: 15px;
 }
 
 .eventHeaderContainer{
