--- a/NewEventHomePage.css
+++ b/NewEventHomePage.css
@@ -236,7 +236,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5; fo
 .eventDescriptionBlock2{
     width: 460px;
     display: inline-block;
-    max-height: 700px;
+    height: 500px;
     vertical-align: top;
 }
 
