--- a/NewEventHomePage.css
+++ b/NewEventHomePage.css
@@ -12,6 +12,14 @@
 body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5; font-size: 15px;
 }
 
+.eventHeader{
+    width: 1366px;
+    height: 100%;
+    margin: auto;
+    padding-bottom: 20px;
+
+}
+
 .eventHeaderContainer{
     width: 1366px;
     height: 300px;
