--- a/edit_club.css
+++ b/edit_club.css
@@ -271,7 +271,13 @@ section{
     border: none;
     border-radius: 4px;
   }
-  
+  .submit_button{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+  }
+
   .submit-button {
     display: inline-block;
     padding: 10px 20px;
