--- a/edit_club.css
+++ b/edit_club.css
@@ -281,6 +281,7 @@ section{
   .submit-button {
     display: inline-block;
     padding: 10px 20px;
+    margin: 10px;
     border: none;
     background-color: #4CAF50;
     color: #fff;
