--- a/EventsPage.css
+++ b/EventsPage.css
@@ -96,3 +96,54 @@ justify-content: center;
     color:black;
     opacity: .8;
 }
+
+
+
+
+
+
+
+.icon {
+    position: absolute;
+    right: 10px;
+}
+.more_icon{
+    height: 30px;
+    object-fit: cover;
+    display: block;
+
+}
+.icon a img:hover {
+    background-color: #ddd;
+  }
+
+.icon_option{
+    position: absolute;
+    box-shadow: 0px 0px 5px rgba(0,0,0,1);
+    right: -65px;
+    background-color: #ffffff;
+    display: none;
+}
+
+.icon_option a{
+    display: block;
+    margin-top: 10px;
+    font-size: 18px;
+    text-shadow:none;
+    padding: 0 20 5 5;
+    text-decoration: none;
+    color: black;
+    
+}
+.icon_option input{
+    padding: 0 20 5 5;
+    font-size: 18px;
+    text-decoration: none;
+    color: black;
+    
+}
+
+.icon_option a:hover {
+    background-color: #bebcbc;
+  }
+
