--- a/edit_event.css
+++ b/edit_event.css
@@ -67,6 +67,12 @@ section{
     border: none;
     border-radius: 4px;
   }
+  .input input[type="file"] {
+    height: 30px;
+    padding: 0;
+    border: none;
+    border-radius: 4px;
+  }
   .submit_button{
     width: 100%;
     display: flex;
