--- a/edit_event.css
+++ b/edit_event.css
@@ -69,7 +69,7 @@ section{
   }
   .input input[type="file"] {
     height: 30px;
-    padding: 0;
+    padding: 8px;
     border: none;
     border-radius: 4px;
   }
