--- a/edit_event.css
+++ b/edit_event.css
@@ -68,10 +68,13 @@ section{
     border-radius: 4px;
   }
   .input input[type="file"] {
-    height: 30px;
+    display: block;
+    margin-top: 8px;
     padding: 8px;
-    border: none;
+    border: 1px solid #ccc;
     border-radius: 4px;
+    font-size: 14px;
+    background-color: #fff;
   }
   .submit_button{
     width: 100%;
