--- a/edit_event.css
+++ b/edit_event.css
@@ -67,8 +67,10 @@ section{
     border: none;
     border-radius: 4px;
   }
-  .input input[type="file"] {
+  .input_up input[type="file"] {
+    width: 50%;
     display: block;
+    text-decoration: none;
     margin-top: 8px;
     padding: 8px;
     border: 1px solid #ccc;
