--- a/EventsPage.css
+++ b/EventsPage.css
@@ -25,7 +25,7 @@
     width:310px;
     background-color: #DDE5E3;
     padding: 10px;
-   
+    position: relative;
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.31)
  
 }
