--- a/profile.css
+++ b/profile.css
@@ -64,3 +64,67 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
     border: 1px solid #ffffff;
     background-color: #006f71;
   }
+
+
+
+
+
+
+  .box-container {
+    max-width: 700px;
+    max-height: 200px;
+    background-color: #FAF0E6;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .box-row {
+    display: flex;
+     flex-direction: column;
+    margin-bottom: 10px;
+  }
+  
+  .box-label {
+    padding-right: 10px;
+    font-weight: bold;
+  }
+  
+  .box-value {
+     padding-right: 10px;
+  }
+  
+  .box-value p{
+  width: 300px;
+     padding-right: 10px;
+     display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      overflow: hidden;
+  }
+     
+  .submit-button {
+  	width: 100px;
+    display: inline-block;
+    padding: 10px;
+    margin:10px;
+    border: none;
+    background-color: #4CAF50;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+  }
+  
+  .submit-button:hover {
+    background-color: #45a049;
+  }
+  
+  
