--- a/profile.css
+++ b/profile.css
@@ -73,7 +73,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   .box-container {
     font-size: 15px;
     max-width: 900px;
-    max-height: 200px;
+    max-height: 160px;
     background-color: #FAF0E6;
     padding: 10px;
     border-radius: 5px;
@@ -91,14 +91,19 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   
   .box-label {
     padding-right: 10px;
+    margin-bottom: 10px;
     font-weight: bold;
   }
   
   .box-value {
      padding-right: 10px;
   }
-  
   .box-value p{
+    display: flex;
+    justify-self: center;
+ }
+ 
+  .box-value span{
   width: 300px;
      padding-right: 10px;
      display: -webkit-box;
