--- a/profile.css
+++ b/profile.css
@@ -91,7 +91,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   
   .box-label {
     padding-right: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-weight: bold;
   }
   
@@ -100,7 +100,7 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   }
   .box-value p{
     display: flex;
-    justify-self: center;
+    align-items: center;
  }
  
   .box-value span{
@@ -113,6 +113,8 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   }
      
   .submit-button {
+    display: flex;
+    align-items: center;
   	width: 100px;
     display: inline-block;
     padding: 10px;
