--- a/profile.css
+++ b/profile.css
@@ -99,7 +99,8 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
      padding-right: 10px;
   }
 
- #mid{
+  .box-value p{
+  text-align: center;
   display: flex;
   align-items: center;
   justify-items: center;
@@ -112,6 +113,11 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
       -webkit-box-orient: vertical;
       -webkit-line-clamp: 4;
       overflow: hidden;
+  }
+  .buttonSection{
+    display: flex;
+    align-items: center;
+    justify-items: center;
   }
      
   .submit-button {
