--- a/profile.css
+++ b/profile.css
@@ -99,6 +99,8 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
      padding-right: 10px;
   }
   .box-value img{
+    width:100px;
+    height:100px;
     object-fit: cover;
  }
   
