--- a/profile.css
+++ b/profile.css
@@ -66,7 +66,12 @@ body {font-family: Verdana, sans-serif; margin: 0; background-color: #f5f5f5;}
   }
 
 
+.list{
+  font-size: 20px;
+  background-color: #026fd4;
+  color: #ffffff;
 
+}
 
 
 
